All figures were replotted

--- a/2_dedicatoria.tex
+++ b/2_dedicatoria.tex
@@ -12,7 +12,7 @@
 %	\textit{A veces, aceptar ayuda cuesta m\'as que ofrecerla.}\\
 %	\textit{Luminara Undulis}
 	\textit{Lo que sabemos es una gota de agua;}\\
-	\textit{lo que ignoramos es el océano}\\
+	\textit{lo que ignoramos es el océano.}\\
 	\textit{Isaac Newton}
 \end{flushright}
 
