--- a/5_cap1.tex
+++ b/5_cap1.tex
@@ -37,6 +37,8 @@ El método de Lanczos es una técnica numérica utilizada para encontrar los aut
 
 Una de las limitaciones de este algoritmo es su estabilidad numérica. \alert{Buscar citas} %TODO
 
+\alert{concluir esta idea y enlazar con la siguiente sección}
+
 \subsection*{Descomposición en valores singulares}\label{subsec:svd}
 
 La SVD provee una descomposición numéricamente estable de matrices que puede ser usado en una gran variedad de propósitos. Como resultado de aplicar este algoritmo se obtiene una descomposición matricial única que existe para toda matriz de valores complejos $\mathbf{X} \in \mathbb{C}^{n \times m}$:
