--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -17,9 +17,9 @@ De hecho, el desplazamiento en esta dirección implica escalar parcialmente las 
 
 Vale la pena observar los principales genes involucrados en este proceso. Para ello, observamos el vector unitario a lo largo del eje PC1. Los genes se clasifican según su contribución al vector unitario. \alert{El procedimiento es similar al algoritmo de Page Rank \cite{Duhan_2009}. Lo usamos en nuestro trabajo anterior \cite{Gonzalez_2023}.}
 
-\alert{En la Tabla I del material suplementario} se encuentra una lista con los 100 primeros genes del \textit{ranking}. Las amplitudes positivas definen genes cuya expresión aumenta con el desplazamiento a lo largo de la dirección positiva de PC1, mientras que las amplitudes negativas se refieren a genes silenciados. Estos genes deberían desempeñar simultáneamente un papel crucial en el envejecimiento, el GB y la EA.
+En la Tabla \ref{tab:apx3} de los apéndices se encuentra una lista con los 100 primeros genes del \textit{ranking}. Las amplitudes positivas definen genes cuya expresión aumenta con el desplazamiento a lo largo de la dirección positiva de PC1, mientras que las amplitudes negativas se refieren a genes silenciados. Estos genes deberían desempeñar simultáneamente un papel crucial en el envejecimiento, el GB y la EA.
 
-Por supuesto, debido al valor puramente cualitativo de nuestro análisis, los genes, y especialmente el \textit{ranking}, deben considerarse con cautela. Sin embargo, cabe destacar que 20 de los genes silenciados están relacionados con los procesos principales de transmisión a través de sinapsis químicas. \alert{En la Tabla Suplementaria II} se enumeran los procesos principales del \textit{Reactome} (\href{https://reactome.org/}{https://reactome.org/}) asociadas a estos genes \cite{Gillespie_2021}. Este conjunto incluye 56 genes anotados.
+Por supuesto, debido al valor puramente cualitativo de nuestro análisis, los genes, y especialmente el \textit{ranking}, deben considerarse con cautela. Sin embargo, cabe destacar que 20 de los genes silenciados están relacionados con los procesos principales de transmisión a través de sinapsis químicas. En la Tabla \ref{tab:apx4} del Apéndice \ref{apx:apx3} se enumeran los procesos principales del \textit{Reactome} (\href{https://reactome.org/}{https://reactome.org/}) asociadas a estos genes \cite{Gillespie_2021}. Este conjunto incluye 56 genes anotados.
 
 La disminución de la función sináptica es una característica conocida del cerebro envejecido, según la revisión \cite{Ham_2020}. La segunda característica principal, según esta referencia, es un aumento de la función inmunitaria, que no es particularmente evidente en nuestro conjunto de genes. En cambio, observamos genes relacionados con la neurotoxicidad de las toxinas de clostridium \cite{Biazzo_2022}, con la disminución de la actividad mitocondrial \cite{Sun_2016}, micro ARN compartidos entre la EA y el GB \cite{Thomas_2020}, etc.
 
@@ -29,9 +29,9 @@ La disminución de la función sináptica es una característica conocida del ce
 
 De hecho, la EA y el GB aparecen en semiplanos opuestos. La evidencia clínica \cite{ou2012does, Driver_2012, Roe_2010, Musicco_2013} y los estudios de biología molecular \cite{Liu_2013, Lanni_2020} respaldan esta disyunción. En consecuencia, el eje PC2 involucra genes con desregulación inversa en la EA y el GB.
 
-\alert{En la Tabla III del material suplementario}, se listan los 100 genes principales definidos por el vector unitario a lo largo del eje PC2. Los pesos positivos corresponden a genes cuya expresión aumenta en la transición de N a la EA. Por otro lado, las amplitudes negativas corresponden a genes cuya expresión aumenta en la transición de N a GB.
+En la Tabla \ref{tab:apx5} de los apéndices, se listan los 100 genes principales definidos por el vector unitario a lo largo del eje PC2. Los pesos positivos corresponden a genes cuya expresión aumenta en la transición de N a la EA. Por otro lado, las amplitudes negativas corresponden a genes cuya expresión aumenta en la transición de N a GB.
 
-Los procesos de \textit{Reactome} relacionadas con estos genes se muestran en la \alert{Tabla IV del material suplementario}. Se relacionan principalmente con el control del ciclo celular, la replicación del ADN, la apoptosis, la modificación de la matriz extracelular, etc., es decir, con las características distintivas del cáncer \cite{Hanahan_2000, Hanahan_2011, Hanahan_2022}.
+Los procesos de \textit{Reactome} relacionadas con estos genes se muestran en la Tabla \ref{tab:apx6} del Apéndice \ref{apx:apx5}. Se relacionan principalmente con el control del ciclo celular, la replicación del ADN, la apoptosis, la modificación de la matriz extracelular, etc., es decir, con las características distintivas del cáncer \cite{Hanahan_2000, Hanahan_2011, Hanahan_2022}.
 
 Anteriormente, mencionamos MMP9 como un ejemplo de genes que desempeñan funciones opuestas en el GB y la EA. El gen codificador de la proteína UBE2C es otro gen conocido con esta característica \cite{MA_2016, Jaladanki_2021}. Por otro lado, el gen BCYRN1, también entre los primeros 100 genes del \textit{ranking}, parece estar subexpresado en GB \cite{Mu2021} y sobreexpresado en la EA \cite{Zhang_2021}. La Fig. \ref{fig:fig1d} muestra gráficos de violín para la expresión diferencial de los genes MMP9 y BCYRN1 en muestras de N, GB y la EA.
 
@@ -42,7 +42,7 @@ Anteriormente, mencionamos MMP9 como un ejemplo de genes que desempeñan funcion
 	\label{fig:fig1d}
 \end{figure}
 
-Noté también que en la \alert{Tabla Suplementaria III} hay numerosos genes codificadores de proteínas ribosomales, de núcleo pequeño, de microARN y de otros tipos, regulados inversamente en ambos procesos. Solo 18 de este conjunto de genes están anotados en los procesos \textit{Reactome}. Este es un problema habitual en el análisis de procesos, donde las funciones biológicas de muchos genes no están anotadas.
+Noté también que en la Tabla \ref{tab:apx5} hay numerosos genes codificadores de proteínas ribosomales, de núcleo pequeño, de microARN y de otros tipos, regulados inversamente en ambos procesos. Solo 18 de este conjunto de genes están anotados en los procesos \textit{Reactome}. Este es un problema habitual en el análisis de procesos, donde las funciones biológicas de muchos genes no están anotadas.
 
 \begin{enumerate}
 	\item[3.] \textbf{Existe un corredor de envejecimiento, es decir un camino preferencial para el envejecimiento en el espacio de expresión genética.}
@@ -50,7 +50,7 @@ Noté también que en la \alert{Tabla Suplementaria III} hay numerosos genes cod
 
 En nuestros datos, existen muestras en la región N y muestras correspondientes a cerebros de edad normal, ubicadas en una región definida cerca del atractor de la EA. En otras palabras, el proceso de envejecimiento parece definir una trayectoria o corredor de decrecimiento continuo del \textit{fitness}, del cual los datos O muestran el último segmento. Sin embargo, faltan muestras en la región intermedia.
 
-En lugar de incluir muestras adicionales en nuestra figura, lo cual introduciría efectos de lote adicionales, utilizamos resultados recientes en un modelo de ratón \cite{hahn2023atlas} que muestran indudablemente un corredor continuo para el envejecimiento. Presentamos en la \alert{Fig. 1 suplementaria} una representación gráfica de sus datos para el cuerpo calloso, una región rica en materia blanca. \alert{En el panel izquierdo}, se grafican las dos primeras componentes principales para los centros de los subgrupos de muestras. Se consideran edades de ratón entre 3 y 28 meses; este último equivale aproximadamente a 80 años en una escala humana. Un corredor para el envejecimiento es evidente. \alert{El panel derecho}, por otro lado, muestra distancias reales incluyendo todos los componentes. Por lo tanto, las proyecciones en el plano (PC1, PC2) son una representación fiel de la distribución real de puntos.
+En lugar de incluir muestras adicionales en nuestra figura, lo cual introduciría efectos de lote adicionales, utilizamos resultados recientes en un modelo de ratón \cite{hahn2023atlas} que muestran indudablemente un corredor continuo para el envejecimiento. Presentamos en la Fig. \ref{fig:suppl1} del Apéndice \ref{apx:apx1} una representación gráfica de sus datos para el cuerpo calloso, una región rica en materia blanca. En el panel izquierdo, se grafican las dos primeras componentes principales para los centros de los subgrupos de muestras. Se consideran edades de ratón entre 3 y 28 meses; este último equivale aproximadamente a 80 años en una escala humana. Un corredor para el envejecimiento es evidente. El panel derecho, por otro lado, muestra distancias reales incluyendo todos los componentes. Por lo tanto, las proyecciones en el plano (PC1, PC2) son una representación fiel de la distribución real de puntos.
 
 En nuestro esquema (Fig. \ref{fig:fig1b}), se delinea un corredor de envejecimiento. La Fig. \ref{fig:fig1c} sugiere que este corredor es una dirección con una mínima disminución de la aptitud.
 
@@ -78,7 +78,7 @@ La imagen es, por lo tanto, la siguiente. El proceso de envejecimiento se relaci
 
 Como se mencionó anteriormente, la afirmación sobre el corredor de envejecimiento está respaldada por el experimento en un modelo de ratón, mientras que la captura por parte del centro de la EA está sugerida por los cálculos de la referencia \cite{Gonzalez_2021}, particularmente por los resultados que se muestran en la Fig. \ref{fig:otoad}, que es un reconstrucción de la Fig. 4 de esa referencia.
 
-\alert{En la Tabla Suplementaria V} se muestran los 10 genes principales en la transición de O a la EA. Se trata de genes incluidos en la \alert{Tabla Suplementaria I}, pero que varían en dirección opuesta, es decir, en la dirección negativa del eje PC1. Este hecho se representa en el diagrama esquemático de la Fig. \ref{fig:fig1b}.
+En la Tabla \ref{tab:apx7} se muestran los 10 genes principales en la transición de O a la EA. Se trata de genes incluidos en la Tabla \ref{tab:apx3}, pero que varían en dirección opuesta, es decir, en la dirección negativa del eje PC1. Este hecho se representa en el diagrama esquemático de la Fig. \ref{fig:fig1b}.
 
 
 \section{Perspectiva cuantitativa}
