--- a/6_cap2.tex
+++ b/6_cap2.tex
@@ -28,7 +28,7 @@ La Fig. \ref{fig:pcaotoad} es una reconstrucción de la figura 3 de la referenci
 	%TODO:
 	\centering
 	\includegraphics[width=0.75\linewidth]{figures/pca_o_to_ad_1}
-	\caption{\alert{Añadir caption}. Figura tomada de la referencia \cite{Gonzalez_2021}.}
+	\caption{ Análisis de componentes principales de los datos de expresión genética del Instituto Allen de la materia blanca del cerebro. Se representan las muestras de O y la EA. Las elipses discontinuas se dibujan de acuerdo con las desviaciones estándar de cada conjunto. Figura tomada de la referencia \cite{Gonzalez_2021}.}
 	\label{fig:pcaotoad}
 \end{figure}
 
@@ -38,7 +38,7 @@ Es bien conocido el papel de la edad en la EA, especialmente en ancianos \cite{a
 	%TODO
 	\centering
 	\includegraphics[width=0.75\linewidth]{figures/O_to_AD_1}
-	\caption{\alert{Añadir caption}. Figura tomada de la referencia \cite{Gonzalez_2021}}
+	\caption{Posición media de la muestra a lo largo del eje PC1 en función de la edad. A medida que aumenta la edad, las muestras de O experimentan una deriva hacia la región de la EA, cuyo centro es aproximadamente independiente de la edad. Figura tomada de la referencia \cite{Gonzalez_2021}}
 	\label{fig:otoad}
 \end{figure}
 
