--- a/8_conclusiones.tex
+++ b/8_conclusiones.tex
@@ -5,12 +5,11 @@
 \addcontentsline{toc}{chapter}{Conclusiones}
 \onehalfspacing
 
-Nuestros sencillos esquemas cualitativos identifican direcciones en el espacio de expresión genética asociadas a diferentes procesos biológicos: envejecimiento, carcinogénesis, aparición de la enfermedad de Alzheimer. Cada una de estas direcciones se caracteriza por un "metagén" o perfil de expresión genética, del cual se pueden extraer los principales genes que contribuyen al proceso.
+Nuestros sencillos esquemas cualitativos identifican direcciones en el espacio de expresión genética asociadas a diferentes procesos biológicos: envejecimiento, carcinogénesis, aparición de la enfermedad de Alzheimer. Cada una de estas direcciones se caracteriza por un ``metagén'' o perfil de expresión genética, del cual se pueden extraer los principales genes que contribuyen al proceso.
 
 Algunos de nuestros resultados confirman conocimientos previos, pero otros requieren mayor corroboración. Por ejemplo, la idea de que el envejecimiento programático podría estar relacionado con evitar el fuerte atractor GB, o la aparición tardía de la EA como la captura por el atractor de EA de muestras de edad normal. Esperamos que estos resultados motiven la investigación experimental en estas direcciones. El experimento en un modelo de ratones es particularmente factible, como lo demuestra la referencia \cite{hahn2023atlas}.
 
 Cabe destacar que incluso datos o métodos computacionales más refinados no podrían modificar sustancialmente nuestros esquemas cualitativos con solo tres atractores. Sus posiciones relativas podrían variar, pero las afirmaciones formuladas se mantendrán.
-
 
 \chapter*{Recomendaciones}\label{recomendations}
 \addcontentsline{toc}{chapter}{Recomendaciones}
