--- a/bibl.bib
+++ b/bibl.bib
@@ -435,7 +435,7 @@
 }
 
 @Article{Gillespie_2021,
-  author    = {Gillespie, Marc and Jassal, Bijay and Stephan, Ralf and Milacic, Marija and Rothfels, Karen and Senff-Ribeiro, Andrea and Griss, Johannes and Sevilla, Cristoffer and Matthews, Lisa and Gong, Chuqiao and Deng, Chuan and Varusai, Thawfeek and Ragueneau, Eliot and Haider, Yusra and May, Bruce and Shamovsky, Veronica and Weiser, Joel and Brunson, Timothy and Sanati, Nasim and Beckman, Liam and Shao, Xiang and Fabregat, Antonio and Sidiropoulos, Konstantinos and Murillo, Julieth and Viteri, Guilherme and Cook, Justin and Shorser, Solomon and Bader, Gary and Demir, Emek and Sander, Chris and Haw, Robin and Wu, Guanming and Stein, Lincoln and Hermjakob, Henning and D’Eustachio, Peter},
+  author    = {Gillespie, Marc and Jassal, Bijay and Stephan, Ralf and others},
   journal   = {Nucleic Acids Research},
   title     = {The reactome pathway knowledgebase 2022},
   year      = {2021},
@@ -730,9 +730,9 @@
 }
 
 @Article{van_Lengerich_2023,
-  author    = {van Lengerich, Bettina and Zhan, Lihong and Xia, Dan and Chan, Darren and Joy, David and Park, Joshua I. and Tatarakis, David and Calvert, Meredith and Hummel, Selina and Lianoglou, Steve and Pizzo, Michelle E. and Prorok, Rachel and Thomsen, Elliot and Bartos, Laura M. and Beumers, Philipp and Capell, Anja and Davis, Sonnet S. and de Weerd, Lis and Dugas, Jason C. and Duque, Joseph and Earr, Timothy and Gadkar, Kapil and Giese, Tina and Gill, Audrey and Gnörich, Johannes and Ha, Connie and Kannuswamy, Malavika and Kim, Do Jin and Kunte, Sebastian T. and Kunze, Lea H. and Lac, Diana and Lechtenberg, Kendra and Leung, Amy Wing-Sze and Liang, Chun-Chi and Lopez, Isabel and McQuade, Paul and Modi, Anuja and Torres, Vanessa O. and Nguyen, Hoang N. and Pesämaa, Ida and Propson, Nicholas and Reich, Marvin and Robles-Colmenares, Yaneth and Schlepckow, Kai and Slemann, Luna and Solanoy, Hilda and Suh, Jung H. and Thorne, Robert G. and Vieira, Chandler and Wind-Mark, Karin and Xiong, Ken and Zuchero, Y. Joy Yu and Diaz, Dolo and Dennis, Mark S. and Huang, Fen and Scearce-Levie, Kimberly and Watts, Ryan J. and Haass, Christian and Lewcock, Joseph W. and Di Paolo, Gilbert and Brendel, Matthias and Sanchez, Pascal E. and Monroe, Kathryn M.},
+  author    = {van Lengerich, Bettina and Zhan, Lihong and Xia, Dan and Chan, Darren and others},
   journal   = {Nature Neuroscience},
-  title     = {A {TREM2}-activating antibody with a blood–brain barrier transport vehicle enhances microglial metabolism in Alzheimer’s disease models},
+  title     = {A {TREM2}-activating antibody with a blood–brain barrier transport vehicle enhances microglial metabolism in {A}lzheimer’s disease models},
   year      = {2023},
   issn      = {1546-1726},
   month     = jan,
@@ -763,6 +763,49 @@
   volume    = {11},
   doi       = {10.3389/fneur.2020.00898},
   publisher = {Frontiers Media SA},
+}
+
+@Article{Maaten2008,
+  author  = {van der Maaten, Laurens and Hinton, Geoffrey},
+  journal = {Journal of Machine Learning Research},
+  title   = {Viualizing data using t-{SNE}},
+  year    = {2008},
+  month   = {11},
+  pages   = {2579-2605},
+  volume  = {9},
+}
+
+@Article{Jung_2024,
+  author    = {Jung, Sangwon and Dagobert, Tristan and Morel, Jean-Michel and Facciolo, Gabriele},
+  journal   = {{Image Processing On Line}},
+  title     = {A {R}eview of t-{SNE}},
+  year      = {2024},
+  issn      = {2105-1232},
+  month     = oct,
+  note      = {\url{https://doi.org/10.5201/ipol.2024.528}},
+  pages     = {250--270},
+  volume    = {14},
+  doi       = {10.5201/ipol.2024.528},
+  publisher = {Image Processing On Line},
+}
+
+@Article{McInnes2018,
+  author    = {McInnes, Leland and Healy, John and Melville, James},
+  title     = {{UMAP}: {U}niform {M}anifold {A}pproximation and {P}rojection for {D}imension {R}eduction},
+  year      = {2018},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  doi       = {10.48550/ARXIV.1802.03426},
+  keywords  = {Machine Learning (stat.ML), Computational Geometry (cs.CG), Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  publisher = {arXiv},
+}
+
+@Article{Becht_2018,
+  author    = {Becht, Etienne and Dutertre, Charles-Antoine and Kwok, Immanuel W. H. and Ng, Lai Guan and Ginhoux, Florent and Newell, Evan W.},
+  title     = {Evaluation of {UMAP} as an alternative to t-{SNE} for single-cell data},
+  year      = {2018},
+  month     = apr,
+  doi       = {10.1101/298430},
+  publisher = {Cold Spring Harbor Laboratory},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
