--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -36,20 +36,20 @@ A nivel genético, hay genes que varían de la misma manera en los procesos de e
 
 Esta visión inusual puede ayudar a comprender las relaciones entre la EA y el GB, e identificar marcadores génicos útiles para ambos procesos. Como un bono adicional, la representación permite encontrar preguntas muy interesantes que se discutirán a continuación.
 
-\alert{El trabajo presentado como tesis de diploma consta de una introducción, tres capítulos, las conclusiones y las recomendaciones. El contenido se distribuye de la siguiente forma:}
+El trabajo presentado como tesis de diploma consta de una introducción, tres capítulos, las conclusiones y las recomendaciones. El contenido se distribuye de la siguiente forma:
 
 \begin{itemize}
-	\item[$\bullet$] \textbf{Introducción:} Se hace una breve descripción del panorama genético y epidemiológico que engloban a la EA, el GB y el envejecimiento. Se ejemplifican las relaciones que existen entre estas enfermedades.
+	\item[$\bullet$] \textbf{Introducción:} Se presenta análisis del panorama genético y epidemiológico relacionado con la EA, el GB y el envejecimiento. Se describe la relación inversa entre la EA y el GB basada en evidencia epidemiológica y molecular. Además, se hace referencia a la idea del envejecimiento programado como factor de riesgo para ambas enfermedades.
 	
-	\item[$\bullet$] \textbf{Capítulo 1:} 
+	\item[$\bullet$] \textbf{Capítulo 1:} Se centra en los métodos y materiales utilizados para analizar los datos de expresión genética. Se detalla la aplicación de técnicas de reducción de dimensionalidad, para simplificar y visualizar conjuntos de datos complejos. Además, se describen las dos principales fuentes de datos. Se explica también el procesamiento de los datos y su conversión a una expresión diferencial logarítmica para facilitar el análisis comparativo.
 	
-	\item[$\bullet$] \textbf{Capítulo 2:} 
+	\item[$\bullet$] \textbf{Capítulo 2:} Se centra en la construcción y análisis del diagrama de tres atractores que emergen en el espacio de expresión genética. Mediante técnicas de reducción dimensional se visualizan las posiciones relativas de estos atractores y se observa cómo las muestras de tejido se desplazan de un estado a otro. Además, se introduce un panorama del fitness celular a través de un diagrama de Wright que ilustra las barreras y la fuerza relativa de cada atractor, enfatizando las diferencias en la transición de un estado a otro.
 	
-	\item[$\bullet$] \textbf{Capítulo 3:} 
+	\item[$\bullet$] \textbf{Capítulo 3:} Presenta los resultados obtenidos del análisis de los datos de expresión genética. En este capítulo se destacan, por un lado, los hallazgos cualitativos, en los que se identifican claramente los atractores asociados al estado normal, al glioblastoma y a la enfermedad de Alzheimer, evidenciando las trayectorias y transiciones entre estos estados; y, por otro lado, se ofrece una perspectiva cuantitativa, respaldada por representaciones gráficas y análisis estadísticos, que valida la inversa relación entre el glioblastoma y el Alzheimer y resalta el papel del envejecimiento en estas transiciones.
 	
-	\item[$\bullet$] \textbf{Conclusiones:} 
+	\item[$\bullet$] \textbf{Conclusiones:} Se sintetiza como el análisis de la expresión génica en la materia blanca del cerebro permite identificar tres atractores y ponen de manifiesto una relación inversa entre el desarrollo del glioblastoma y la aparición del Alzheimer. 
 	
-	\item[$\bullet$] \textbf{Recomendaciones:} 
+	\item[$\bullet$] \textbf{Recomendaciones:} Se destaca la necesidad de realizar estudios futuros que afinen y amplíen el modelo propuesto, proponiendo la integración de técnicas analíticas más robustas y la incorporación de datos de plataforma unificada para superar las limitaciones actuales de heterogeneidad.
 	
 	
 \end{itemize}
