--- a/4_introduccion.tex
+++ b/4_introduccion.tex
@@ -12,7 +12,7 @@ Un paradigma conocido en la biología molecular expresa que los máximos locales
 \begin{figure}[ht]
 	\centering
 	\includegraphics[scale=0.64]{figures/wright_diagram.png}
-	\caption{Representación esquemática de un diagrama de Wright. Las zonas de mayor \textit{fitness} (+) están asociadas con estados biológicos accesibles. Las de menor \textit{fitness} (-) son solo zonas de transito. Las lineas discontinuas delimitan los distintos niveles de \textit{fitness}. Tomada de la referencia \cite{wright1932roles}}
+	\caption{Representación esquemática de un diagrama de Wright. Las zonas de mayor \textit{fitness} (+) están asociadas con estados biológicos accesibles. Las de menor \textit{fitness} (-) son solo zonas de transito. Las lineas discontinuas delimitan los distintos niveles de \textit{fitness}. Tomada de la referencia \cite{wright1932roles}.}
 	\label{fig:wrightDiagram}
 \end{figure}
 
