--- a/7_cap3.tex
+++ b/7_cap3.tex
@@ -102,7 +102,7 @@ Debido al carácter cualitativo de nuestro estudio, el análisis de genes y proc
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=\linewidth]{figures/suppl2}
-	\caption{Gráficos de violín para marcadores conocidos en la EA y el GB}
+	\caption{Gráficos de violín para marcadores conocidos en la EA y el GB.}
 	\label{fig:violin}
 \end{figure}
 
